# spox

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yml  CHANGELOG.rst  LICENSE  README.md  SECURITY.md  environment.yml  pixi.toml  pyproject.toml  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build_and_publish.yml  ci.yml  nightly.yml  scorecard.yml  weekly.yml
codegen/: generate.py
codegen/templates/extras/: promote.jinja2
codegen/templates/type_inference/: onehot11.jinja2  onehotencoder1.jinja2
conda.recipe/: meta.yaml
docs/: conf.py  experimental.rst  index.rst  operators.rst  opset.rst  overview.rst  unstable.rst
docs/guides/: advanced.ipynb  converter.ipynb  inference.ipynb  inline.ipynb  showcase.ipynb  tutorial.ipynb
docs/manual/: changelog.rst  operators.rst  overview.rst  unstable.rst
examples/: monte_carlo_pi.py
src/: generate.py
src/spox/: __init__.py  _adapt.py  _arrow.py  _arrowfields.py  _attributes.py  _build.py  _build_api.py  _config.py  _debug.py  _deprecated.py  _exceptions.py  _fields.py  _function.py  _future.py  _graph.py  _inline.py  _internal_op.py  _node.py  _patch_ref_impl.py  _public.py  _schemas.py  _scope.py  _shape.py  _standard.py  _traverse.py  _type_inference.py  _type_inference_utils.py  _type_system.py  _utils.py  _value_prop.py  _value_prop_backend.py  _var.py  _varfields.py
src/spox/opset/ai/onnx/: v17.py  v18.py  v19.py  v20.py  v21.py  v22.py  v23.py  v24.py
src/spox/opset/ai/onnx/ml/: v3.py  v4.py  v5.py
src/steelix/: __init__.py  _adapt.py  _arrow.py  _arrowfields.py  _attributes.py  _build.py  _config.py  _debug.py  _function.py  _graph.py  _internal_op.py  _node.py  _scope.py  _shape.py  _standard.py  _type_inference.py  _type_system.py  _utils.py  arrow.py  arrowfields.py  attr.py  attrfields.py  converter.py  debug.py  defnode.py  fields.py  function.py  graph.py  internal_op.py  node.py  schemas.py  shape.py  standard.py  type_system.py
src/steelix/opset/ai/onnx/: v17.py
src/steelix/opset/ai/onnx/ml/: v3.py
src/templates/: class.jinja2  construct.jinja2  constructor.jinja2  docstring.jinja2  preamble.jinja2  summary.jinja2
src/templates/extras/: const.jinja2  promote.jinja2  xif.jinja2  xloop.jinja2
src/templates/type_inference/: arrayfeatureextractor1.jinja2  binarizer1.jinja2  categorymapper1.jinja2  compress11.jinja2  imputer1.jinja2  linearregressor1.jinja2  loop16.jinja2  normalizer1.jinja2  onehotencoder1.jinja2  scaler1.jinja2  treeensembleclassifier3.jinja2  treeensembleregressor3.jinja2
src/templates/value_propagation/: constant13.jinja2
tests/: conftest.py  test_adapt.py  test_attr.py  test_broadcast.py  test_build_api.py  test_const.py  test_constructors.py  test_custom_operator.py  test_def_node.py  test_embed.py  test_equiv_types.py  test_function.py  test_graph.py  test_initializer.py  test_inline.py  test_opsets.py  test_optional.py  test_public.py  test_standard_op.py  test_subgraphs.py  test_tensor.py  test_type_translation.py  test_value_propagation.py
tests/full/: __init__.py  conftest.py  test_brackets.py  test_lifting.py  test_turing_completeness.py
tests/future/: test_var_operators.py
tests/type_inference/: test_array_feature_extractor.py  test_binarizer.py  test_category_mapper.py  test_compress.py  test_imputer.py  test_label_encoder.py  test_linear_regressor.py  test_loop.py  test_normalizer.py  test_one_hot.py  test_one_hot_encoder.py  test_scaler.py  test_svm_regressor.py  test_tree_ensemble_classifier.py  test_tree_ensemble_regressor.py
tools/: generate_opset.py  generate_opset.sh
tools/templates/: class.jinja2  construct.jinja2  constructor.jinja2  docstring.jinja2  inherit.jinja2  preamble.jinja2  summary.jinja2
tools/templates/extras/: const.jinja2  old_const.jinja2  promote.jinja2
tools/templates/type_inference/: arrayfeatureextractor1.jinja2  categorymapper1.jinja2  compress11.jinja2  if16.jinja2  loop16-fix.jinja2  loop16.jinja2  treeensembleclassifier3.jinja2
tools/templates/value_propagation/: constant13.jinja2
tutorial/: showcase.ipynb
