[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[project]
name = "spox"
description = "A framework for constructing ONNX computational graphs."
authors = [
  {name = "Jakub Bachurski", email = "kbachurski@gmail.com"},
  {name = "Christian Bourjau", email = "christian.bourjau@quantco.com"},
]

maintainers = [
  {name = "Jakub Bachurski", email = "kbachurski@gmail.com"},
  {name = "Christian Bourjau", email = "christian.bourjau@quantco.com"},
]
keywords = [
  "machine-learning",
  "onnx",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

requires-python = ">=3.8.0"

dependencies = [
  "numpy",
  "onnx>=1.13",
  "packaging",
]

[project.urls]
Source = "https://github.com/quantco/spox"

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.setuptools_scm]
version_scheme = "post-release"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "spox"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
# This will be pytest's future default.
addopts = "--import-mode=importlib"