[metadata]
name = steelix
description = Prototype framework to replace sklearn-onnx in quantcore.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quantco/steelix
author = QuantCo, Inc.
author_email = noreply@quantco.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
python_requires = >=3.8
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
